--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @plugin "@tailwindcss/typography";
+@import "tippy.js/dist/tippy.css";
 
 @custom-variant dark (&:is(.dark *));
 
